--- a/ssmShop/ssmShop/pom.xml
+++ b/ssmShop/ssmShop/pom.xml
@@ -114,6 +114,14 @@
       <scope>test</scope>
     </dependency>
 
+<!--      slf4j-->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.7.2</version>
+          <scope>compile</scope>
+      </dependency>
+
 <!--    JSP相关-->
     <dependency>
       <groupId>jstl</groupId>
