--- a/WeTally/front/package.json
+++ b/WeTally/front/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "mpvue": "^2.0.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -46,6 +48,10 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
+    "mkdirp": "^0.5.1",
+    "mpvue-loader": "^2.0.0",
+    "mpvue-template-compiler": "^2.0.0",
+    "mpvue-webpack-target": "^1.0.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "portfinder": "^1.0.13",
@@ -55,21 +61,18 @@
     "px2rpx-loader": "^0.1.10",
     "relative": "^3.0.2",
     "rimraf": "^2.6.0",
+    "sass": "^1.54.5",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "vue-style-loader": "^4.1.0",
-    "mkdirp": "^0.5.1",
-    "mpvue-loader": "^2.0.0",
-    "mpvue-template-compiler": "^2.0.0",
-    "mpvue-webpack-target": "^1.0.3",
-    "webpack-mpvue-vendor-plugin": "^2.0.0",
-    "webpack-mpvue-asset-plugin": "^2.0.0",
+    "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
     "webpack-merge": "^4.1.0",
-    "webpack": "^3.11.0"
+    "webpack-mpvue-asset-plugin": "^2.0.0",
+    "webpack-mpvue-vendor-plugin": "^2.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
