--- a/WeTally/front/src/app.json
+++ b/WeTally/front/src/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/main",
+    "pages/userCenter/main",
     "pages/logs/main",
     "pages/counter/main"
   ],
@@ -26,6 +27,11 @@
       "pagePath": "pages/logs/main",
       "iconPath": "static/tabs/orders.png",
       "selectedIconPath": "static/tabs/orders-active.png"
+    },{
+      "text": "用户",
+      "pagePath": "pages/userCenter/main",
+      "iconPath": "static/tabs/orders.png",
+      "selectedIconPath": "static/tabs/orders-active.png"
     }],
 
     "items": [{
@@ -36,6 +42,11 @@
     }, {
       "name": "订单",
       "pagePath": "pages/logs/main",
+      "icon": "static/tabs/orders.png",
+      "activeIcon": "static/tabs/orders-active.png"
+    }, {
+      "name": "用户",
+      "pagePath": "pages/userCenter/main",
       "icon": "static/tabs/orders.png",
       "activeIcon": "static/tabs/orders-active.png"
     }],
