--- a/WeTally/front/src/app.json
+++ b/WeTally/front/src/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/main",
     "pages/userCenter/main",
+    "pages/add/main",
     "pages/logs/main",
     "pages/counter/main"
   ],
@@ -22,6 +23,11 @@
       "pagePath": "pages/index/main",
       "iconPath": "static/tabs/home.png",
       "selectedIconPath": "static/tabs/home-active.png"
+    },{
+      "text": "新建记录",
+      "pagePath": "pages/add/main",
+      "iconPath": "static/tabs/add.png",
+      "selectedIconPath": "static/tabs/add-active.png"
     },{
       "text": "用户",
       "pagePath": "pages/userCenter/main",
