--- a/reggie/reggie_take_out/pom.xml
+++ b/reggie/reggie_take_out/pom.xml
@@ -88,6 +88,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.4.5</version>
         </dependency>
 
         <dependency>
