--- a/reggie/reggie_take_out/src/main/resources/application.yml
+++ b/reggie/reggie_take_out/src/main/resources/application.yml
@@ -13,11 +13,12 @@ spring:
   redis:
     host: localhost
     port: 6379
-  #    password:
+  # password:
     database: 0
   cache:
     redis:
-      time-to-live: 1800000 #设置缓存数据的过期时间
+      time-to-live: 1800000 #设置缓存数据的过期时间ms
+
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
